Enable preview features (#5)
* Enable preview features

* add --enable-preview flag to application startup parameters

* use gradle toolchain